--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#424BF4</color>
+    <color name="colorSecondary">#ED4343</color>
     <color name="colorPrimaryDark">#26076E</color>
-    <color name="colorAccent">#B50E51</color>
+    <color name="colorAccent">#FFEE58</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
 </resources>
