--- a/Android/app/src/main/res/values/styles.xml
+++ b/Android/app/src/main/res/values/styles.xml
@@ -8,6 +8,9 @@
 
         <!-- Text styles -->
         <item name="android:textColor">#000000</item>
+
+        <!-- Text Input Layout -->
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
     </style>
 
 
