--- a/Android/app/src/main/res/layout/layout_side_nav_faculty.xml
+++ b/Android/app/src/main/res/layout/layout_side_nav_faculty.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorSecondary"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_black"
+        android:layout_margin="20dp"
+        android:text="Quizzard"
+        android:textColor="@color/colorWhite"
+        android:textSize="50sp" />
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorSecondary"
+        app:menu="@menu/menu_drawer_faculty"
+        app:itemTextColor="@color/colorWhite"
+        app:itemTextAppearance="@style/AppSideNavText"
+        app:elevation="0dp"/>
+
+</LinearLayout>
