--- a/Android/app/src/main/res/layout/layout_side_nav_student.xml
+++ b/Android/app/src/main/res/layout/layout_side_nav_student.xml
@@ -16,6 +16,7 @@
         android:textSize="50sp" />
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
