--- a/Android/app/src/main/res/menu/menu_drawer_faculty.xml
+++ b/Android/app/src/main/res/menu/menu_drawer_faculty.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:title="Profile"
+        android:id="@+id/profile"/>
+    <item
+        android:title="Previous Quizzes"
+        android:id="@+id/previous_quizzes"/>
+    <item
+        android:title="Faculties"
+        android:id="@+id/faculties"/>
+    <item
+        android:title="Students"
+        android:id="@+id/students"/>
+    <item
+        android:title="Logout"
+        android:id="@+id/logout"/>
 </menu>
