--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#424BF4</color>
-    <color name="colorSecondary">#ED4343</color>
+    <color name="colorSecondary">#8E0404</color>
     <color name="colorPrimaryDark">#26076E</color>
     <color name="colorAccent">#FFEE58</color>
     <color name="colorWhite">#ffffff</color>
