--- a/Android/app/src/main/res/layout/activity_home_faculty.xml
+++ b/Android/app/src/main/res/layout/activity_home_faculty.xml
@@ -24,6 +24,7 @@
             app:titleTextColor="@color/colorWhite" />
 
         <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
