--- a/Android/app/src/main/res/layout/recycler_subject.xml
+++ b/Android/app/src/main/res/layout/recycler_subject.xml
@@ -44,6 +44,8 @@
             android:layout_height="30dp"/>
 
         <com.google.android.material.button.MaterialButton
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
             android:id="@+id/register"
             android:visibility="gone"
             android:text="Register"
