--- a/Android/app/src/main/res/layout/activity_register_faculty.xml
+++ b/Android/app/src/main/res/layout/activity_register_faculty.xml
@@ -94,6 +94,6 @@
         android:layout_gravity="center"
         android:text="Submit"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>.
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
