--- a/app/src/main/res/layout/recycler_make_questions_faculty.xml
+++ b/app/src/main/res/layout/recycler_make_questions_faculty.xml
@@ -14,136 +14,166 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:id="@+id/serial"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             android:fontFamily="@font/roboto_black"
             android:textSize="18sp"
             tools:text="1." />
 
-        <GridLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_weight="1"
-            android:rowCount="2"
-            android:columnCount="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <LinearLayout
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/question"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Question" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/options"
                 android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <GridLayout
                 android:layout_weight="1"
-                android:orientation="vertical"
+                android:rowCount="2"
+                android:columnCount="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_gravity="center"
+                <LinearLayout
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:text="Total" />
-                <it.sephiroth.android.library.numberpicker.NumberPicker
-                    android:layout_gravity="center"
-                    style="@style/NumberPicker.Filled"
-                    app:picker_max="100"
-                    app:picker_min="0"
-                    android:progress="0"
-                    app:picker_stepSize="1"
-                    app:picker_tracker="exponential"
-                    app:picker_orientation="vertical"
-                    android:id="@+id/total"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="Total" />
+                    <it.sephiroth.android.library.numberpicker.NumberPicker
+                        android:layout_gravity="center"
+                        style="@style/NumberPicker.Filled"
+                        app:picker_max="100"
+                        app:picker_min="0"
+                        android:progress="0"
+                        app:picker_stepSize="1"
+                        app:picker_tracker="exponential"
+                        app:picker_orientation="vertical"
+                        android:id="@+id/total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    />
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="Correct" />
+                    <it.sephiroth.android.library.numberpicker.NumberPicker
+                        android:layout_gravity="center"
+                        style="@style/NumberPicker.Filled"
+                        app:picker_max="100"
+                        app:picker_min="0"
+                        android:progress="0"
+                        app:picker_stepSize="1"
+                        app:picker_tracker="exponential"
+                        app:picker_orientation="vertical"
+                        android:id="@+id/correct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        />
 
-                <TextView
-                    android:layout_gravity="center"
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:text="Correct" />
-                <it.sephiroth.android.library.numberpicker.NumberPicker
-                    android:layout_gravity="center"
-                    style="@style/NumberPicker.Filled"
-                    app:picker_max="100"
-                    app:picker_min="0"
-                    android:progress="0"
-                    app:picker_stepSize="1"
-                    app:picker_tracker="exponential"
-                    app:picker_orientation="vertical"
-                    android:id="@+id/correct"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="Positive" />
+                    <it.sephiroth.android.library.numberpicker.NumberPicker
+                        android:layout_gravity="center"
+                        style="@style/NumberPicker.Filled"
+                        app:picker_max="100"
+                        app:picker_min="0"
+                        android:progress="0"
+                        app:picker_stepSize="1"
+                        app:picker_tracker="exponential"
+                        app:picker_orientation="vertical"
+                        android:id="@+id/positive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    />
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_gravity="center"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="Negative" />
+                    <it.sephiroth.android.library.numberpicker.NumberPicker
+                        android:layout_gravity="center"
+                        style="@style/NumberPicker.Filled"
+                        app:picker_max="100"
+                        app:picker_min="0"
+                        android:progress="0"
+                        app:picker_stepSize="1"
+                        app:picker_tracker="exponential"
+                        app:picker_orientation="vertical"
+                        android:id="@+id/negative"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        />
 
-                <TextView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:text="Positive" />
-                <it.sephiroth.android.library.numberpicker.NumberPicker
-                    android:layout_gravity="center"
-                    style="@style/NumberPicker.Filled"
-                    app:picker_max="100"
-                    app:picker_min="0"
-                    android:progress="0"
-                    app:picker_stepSize="1"
-                    app:picker_tracker="exponential"
-                    app:picker_orientation="vertical"
-                    android:id="@+id/positive"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:text="Negative" />
-                <it.sephiroth.android.library.numberpicker.NumberPicker
-                    android:layout_gravity="center"
-                    style="@style/NumberPicker.Filled"
-                    app:picker_max="100"
-                    app:picker_min="0"
-                    android:progress="0"
-                    app:picker_stepSize="1"
-                    app:picker_tracker="exponential"
-                    app:picker_orientation="vertical"
-                    android:id="@+id/negative"
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    />
-
-            </LinearLayout>
+                </LinearLayout>
 
 
-        </GridLayout>
+            </GridLayout>
+
+        </LinearLayout>
+
+
 
 
     </LinearLayout>
