Made student quiz activity

--- a/app/src/main/res/layout/activity_quiz_student.xml
+++ b/app/src/main/res/layout/activity_quiz_student.xml
@@ -44,6 +44,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:id="@+id/download_paper"
+                android:layout_marginTop="10dp"
+                android:text="Download Paper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
         <douglasspgyn.com.github.circularcountdown.CircularCountdown
@@ -59,30 +68,21 @@
 
     </LinearLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_marginHorizontal="10dp"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
-            <com.github.barteksc.pdfviewpager.PDFViewPager
-                android:id="@+id/pdf_view_pager"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"/>
-
-            <LinearLayout
-                android:id="@+id/questions"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/submit"
+        android:layout_margin="20dp"
+        android:layout_gravity="right"
+        app:backgroundTint="@color/colorPrimaryDark"
+        android:text="Submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 
