changed submit format of quiz

--- a/app/src/main/res/layout/activity_quiz_student.xml
+++ b/app/src/main/res/layout/activity_quiz_student.xml
@@ -80,7 +80,7 @@
         android:layout_margin="20dp"
         android:layout_gravity="right"
         app:backgroundTint="@color/colorPrimaryDark"
-        android:text="Submit"
+        android:text="End Test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
