completed student quiz feature

--- a/app/src/main/res/layout/recycler_quiz_student_question.xml
+++ b/app/src/main/res/layout/recycler_quiz_student_question.xml
@@ -10,34 +10,95 @@
 
     <LinearLayout
         android:layout_margin="10dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/serial"
-                tools:text="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/question"
-                android:layout_marginLeft="10dp"
-                tools:text="This is the first question"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/serial"
+                    tools:text="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_weight="1"
+                    android:id="@+id/question"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/roboto_black"
+                    tools:text="This is the first question" />
+
+            </LinearLayout>
+
+            <RadioGroup
+                android:layout_marginTop="10dp"
+                android:id="@+id/option_radio_group"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
-        <RadioGroup
-            android:layout_marginTop="10dp"
-            android:id="@+id/option_radio_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_black"
+                    android:text="+" />
+
+                <TextView
+                    android:id="@+id/positive"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_black"
+                    tools:text="3" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/roboto_black"
+                    android:text="-" />
+
+                <TextView
+                    android:id="@+id/negative"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_black"
+                    tools:text="1" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/remove_response"
+                android:foreground="?attr/selectableItemBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_black"
+                android:text="Remove Response"
+                android:textColor="#C80F0F" />
+
+        </LinearLayout>
 
 
 
