--- a/app/src/main/res/layout/recycler_upcoming_quiz_student.xml
+++ b/app/src/main/res/layout/recycler_upcoming_quiz_student.xml
@@ -94,7 +94,7 @@
                 tools:visibility="visible"
                 android:visibility="gone"
                 android:id="@+id/start_quiz"
-                android:text="Start Quiz"
+                android:text="Enter Quiz"
                 app:backgroundTint="@color/colorPrimaryDark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
