--- a/app/src/main/res/layout/recycler_quiz_result_faculty.xml
+++ b/app/src/main/res/layout/recycler_quiz_result_faculty.xml
@@ -108,7 +108,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
-                    tools:text="50%" />
+                    tools:text="50" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    tools:text="%" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -133,8 +139,6 @@
             </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
-                tools:visibility="visible"
-                android:visibility="gone"
                 android:id="@+id/quiz_report"
                 android:text="Quiz Report"
                 app:backgroundTint="@color/colorPrimaryDark"
