--- a/app/src/main/res/layout/activity_host_quiz_faculty.xml
+++ b/app/src/main/res/layout/activity_host_quiz_faculty.xml
@@ -115,18 +115,18 @@
                     android:fontFamily="@font/roboto_black"
                     android:text="Quiz Duration (Minutes)"
                     android:textSize="18sp" />
+
                 <it.sephiroth.android.library.numberpicker.NumberPicker
-                    style="@style/NumberPicker.Filled"
-                    app:picker_max="600"
-                    app:picker_min="0"
-                    android:progress="0"
-                    app:picker_stepSize="1"
-                    app:picker_tracker="exponential"
-                    app:picker_orientation="vertical"
                     android:id="@+id/duration"
+                    style="@style/NumberPicker.Filled"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
-                    />
+                    android:progress="0"
+                    app:picker_max="600"
+                    app:picker_min="0"
+                    app:picker_orientation="vertical"
+                    app:picker_stepSize="1"
+                    app:picker_tracker="exponential" />
 
             </LinearLayout>
 
