--- a/app/src/main/res/layout/recycler_upcoming_quiz_faculty.xml
+++ b/app/src/main/res/layout/recycler_upcoming_quiz_faculty.xml
@@ -99,6 +99,15 @@
 
             <ImageView
                 android:layout_marginTop="20dp"
+                android:id="@+id/edit_quiz"
+                android:foreground="?attr/selectableItemBackground"
+                android:layout_gravity="center"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src = "@drawable/ic_edit"/>
+
+            <ImageView
+                android:layout_marginTop="20dp"
                 android:id="@+id/add_event"
                 android:foreground="?attr/selectableItemBackground"
                 android:layout_gravity="center"
