created student and faculty profile browse feature

--- a/app/src/main/res/menu/menu_drawer_student.xml
+++ b/app/src/main/res/menu/menu_drawer_student.xml
@@ -8,6 +8,9 @@
         android:title="Subject"
         android:id="@+id/subject"/>
     <item
+        android:title="Students"
+        android:id="@+id/students"/>
+    <item
         android:title="Faculties"
         android:id="@+id/faculties"/>
     <item
