created remove user and unregister feature admin

--- a/app/src/main/res/layout/recycler_verify_student.xml
+++ b/app/src/main/res/layout/recycler_verify_student.xml
@@ -21,7 +21,6 @@
             android:layout_height="100dp"/>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -67,33 +66,43 @@
                     android:fontFamily="@font/roboto_black"
                     android:textSize="18sp"
                     tools:text="3" />
+                <ImageView
+                    android:id="@+id/admit_card"
+                    android:src="@drawable/ic_card"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"/>
+
 
             </LinearLayout>
 
-
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
                 <LinearLayout
+                    android:layout_gravity="right"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:id="@+id/admit_card"
-                        android:layout_marginLeft="20dp"
-                        android:src="@drawable/ic_card"
                         android:foreground="?attr/selectableItemBackground"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"/>
+                        android:src="@drawable/ic_delete"
+                        android:id="@+id/remove"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:tint="@color/colorSecondary" />
                 </LinearLayout>
-
-
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/register"
                     android:text="Register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
+
+
+
 
         </LinearLayout>
 
