--- a/app/src/main/res/layout/recycler_verify_faculty.xml
+++ b/app/src/main/res/layout/recycler_verify_faculty.xml
@@ -27,53 +27,73 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_weight="1"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/name"
+                <LinearLayout
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="20dp"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_black"
-                    android:textSize="18sp"
-                    tools:text="Om Singh" />
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_marginTop="5dp"
-                    android:id="@+id/faculty_id"
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_black"
+                        android:textSize="18sp"
+                        tools:text="Om Singh" />
+
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:id="@+id/faculty_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="18sp"
+                        tools:text="Faculty Id" />
+
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:id="@+id/department"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:textSize="18sp"
+                        tools:text="ECE" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_gravity="right"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:textSize="18sp"
-                    tools:text="Faculty Id" />
-
-                <TextView
-                    android:layout_marginTop="5dp"
-                    android:id="@+id/department"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto"
-                    android:textSize="18sp"
-                    tools:text="ECE" />
-
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:foreground="?attr/selectableItemBackground"
+                            android:src="@drawable/ic_delete"
+                            android:id="@+id/remove"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            app:tint="@color/colorSecondary" />
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
 
-
-            <LinearLayout
+            <com.google.android.material.button.MaterialButton
                 android:layout_gravity="right"
+                android:id="@+id/register"
+                android:text="Register"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"/>
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/register"
-                    android:text="Register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
 
         </LinearLayout>
 
