--- a/app/src/main/res/layout/recycler_student_admin.xml
+++ b/app/src/main/res/layout/recycler_student_admin.xml
@@ -95,6 +95,14 @@
                         app:tint="@color/colorSecondary" />
                 </LinearLayout>
                 <com.google.android.material.button.MaterialButton
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    android:layout_gravity="right"
+                    android:id="@+id/subjects"
+                    android:text="Subjects"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/register"
                     android:text="Register"
                     android:layout_width="wrap_content"
