--- a/app/src/main/res/layout/activity_home_student.xml
+++ b/app/src/main/res/layout/activity_home_student.xml
@@ -44,6 +44,43 @@
                 android:text="Quizzes"/>
         </com.google.android.material.tabs.TabLayout>
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:visibility="gone"
+            android:id="@+id/swipe_refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/roboto_black"
+                        android:text="Not Registered"
+                        android:textAlignment="center"
+                        android:textSize="36sp" />
+
+                    <ImageView
+                        android:layout_gravity="center"
+                        android:layout_marginTop="50dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_pending"/>
+
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+
     </LinearLayout>
 
     <include
