--- a/app/src/main/res/layout/activity_subject_user_admin.xml
+++ b/app/src/main/res/layout/activity_subject_user_admin.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorSecondary"
+        android:background="@color/colorAdmin"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:navigationIcon="@drawable/ic_back"
