--- a/app/src/main/res/layout/activity_host_quiz_faculty.xml
+++ b/app/src/main/res/layout/activity_host_quiz_faculty.xml
@@ -125,9 +125,7 @@
                     app:picker_max="600"
                     app:picker_min="0"
                     app:picker_orientation="vertical"
-                    app:picker_stepSize="1"
-                    app:picker_tracker="exponential" />
-
+                    app:picker_stepSize="1"/>
             </LinearLayout>
 
 
