--- a/app/src/main/res/layout/recycler_chat.xml
+++ b/app/src/main/res/layout/recycler_chat.xml
@@ -12,7 +12,7 @@
         app:cardCornerRadius="10dp"
         android:layout_margin="10dp"
         app:cardElevation="5dp"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -25,7 +25,8 @@
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_black"
+                android:fontFamily="@font/roboto"
+                android:textColor="@color/colorSecondary"
                 android:textSize="18sp"
                 tools:text="This is the message" />
 
@@ -48,12 +49,14 @@
                 </LinearLayout>
 
                 <TextView
-                    android:layout_marginLeft="10dp"
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
+                    android:layout_marginLeft="10dp"
                     android:fontFamily="@font/roboto"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="12sp"
                     tools:text="15 Nov 2020" />
             </LinearLayout>
         </LinearLayout>
